rusty_c/mydisk/out.txt
warning: unused import: `std::process::Command`
 --> build.rs:3:5
  |
3 | use std::process::Command;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: `mydisk` (build script) generated 1 warning
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.h:1:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/egos.h:1:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/file.h:33:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/inode.h:38:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c: In function 'disk_setsize':
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:16:1: warning: no return statement in function returning non-void [-Wreturn-type]
warning:  static int disk_setsize() { FATAL("disk: cannot set the size"); }
warning:  ^~~~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c: In function 'disk_read':
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:18:33: warning: unused parameter 'bs' [-Wunused-parameter]
warning:  static int disk_read(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                       ~~~~~~~~~~~^~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:18:50: warning: unused parameter 'ino' [-Wunused-parameter]
warning:  static int disk_read(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                                      ~~~~~~~~~~~~~^~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c: In function 'disk_write':
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:22:34: warning: unused parameter 'bs' [-Wunused-parameter]
warning:  static int disk_write(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                        ~~~~~~~~~~~^~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:22:51: warning: unused parameter 'ino' [-Wunused-parameter]
warning:  static int disk_write(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                                       ~~~~~~~~~~~~~^~~
   Compiling mydisk v0.1.0 (/home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk)
warning: unused import: `alloc::boxed::Box`
 --> src/common.rs:8:5
  |
8 | use alloc::boxed::Box;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: type `block_no` should have an upper camel case name
  --> /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/target/x86_64-unknown-linux-gnu/release/build/mydisk-4e63a64f90d42591/out/bindings.rs:27:10
   |
27 | pub type block_no = cty::c_uint;
   |          ^^^^^^^^ help: convert the identifier to upper camel case: `BlockNo`
   |
   = note: `#[warn(non_camel_case_types)]` on by default

warning: type `block_t` should have an upper camel case name
  --> /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/target/x86_64-unknown-linux-gnu/release/build/mydisk-4e63a64f90d42591/out/bindings.rs:58:10
   |
58 | pub type block_t = block;
   |          ^^^^^^^ help: convert the identifier to upper camel case: `BlockT`

warning: type `inode_store_t` should have an upper camel case name
   --> /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/target/x86_64-unknown-linux-gnu/release/build/mydisk-4e63a64f90d42591/out/bindings.rs:155:10
    |
155 | pub type inode_store_t = inode_store;
    |          ^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `InodeStoreT`

warning: type `inode_intf` should have an upper camel case name
   --> /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/target/x86_64-unknown-linux-gnu/release/build/mydisk-4e63a64f90d42591/out/bindings.rs:156:10
    |
156 | pub type inode_intf = *mut inode_store_t;
    |          ^^^^^^^^^^ help: convert the identifier to upper camel case: `InodeIntf`

warning: type `earth__bindgen_ty_1` should have an upper camel case name
   --> /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/target/x86_64-unknown-linux-gnu/release/build/mydisk-4e63a64f90d42591/out/bindings.rs:488:10
    |
488 | pub type earth__bindgen_ty_1 = cty::c_uint;
    |          ^^^^^^^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `EarthBindgenTy1`

warning: type `earth__bindgen_ty_2` should have an upper camel case name
   --> /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/target/x86_64-unknown-linux-gnu/release/build/mydisk-4e63a64f90d42591/out/bindings.rs:491:10
    |
491 | pub type earth__bindgen_ty_2 = cty::c_uint;
    |          ^^^^^^^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `EarthBindgenTy2`

warning: unused import: `core::mem::transmute`
  --> src/lib.rs:11:5
   |
11 | use core::mem::transmute;
   |     ^^^^^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
 --> src/common.rs:1:1
  |
1 | #![feature(alloc)]
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_attributes)]` on by default

error[E0605]: non-primitive cast: `[i8; 512]` as `[u8; 512]`
  --> src/lib.rs:61:24
   |
61 |                 bytes: (*block).bytes as [u8; Self::BLOCK_SIZE]
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error[E0605]: non-primitive cast: `[u8; 512]` as `[i8; 512]`
  --> src/lib.rs:71:20
   |
71 |             bytes: bytes_copy as [i8; Self::BLOCK_SIZE]
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error[E0605]: non-primitive cast: `[u8; 512]` as `[i8; 512]`
  --> src/lib.rs:80:23
   |
80 |         block.bytes = self.bytes as [i8; Self::BLOCK_SIZE];
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

For more information about this error, try `rustc --explain E0605`.
warning: `mydisk` (lib) generated 9 warnings
The following warnings were emitted during compilation:

warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.h:1:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/egos.h:1:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/file.h:33:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/inode.h:38:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c: In function 'disk_setsize':
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:16:1: warning: no return statement in function returning non-void [-Wreturn-type]
warning:  static int disk_setsize() { FATAL("disk: cannot set the size"); }
warning:  ^~~~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c: In function 'disk_read':
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:18:33: warning: unused parameter 'bs' [-Wunused-parameter]
warning:  static int disk_read(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                       ~~~~~~~~~~~^~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:18:50: warning: unused parameter 'ino' [-Wunused-parameter]
warning:  static int disk_read(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                                      ~~~~~~~~~~~~~^~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c: In function 'disk_write':
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:22:34: warning: unused parameter 'bs' [-Wunused-parameter]
warning:  static int disk_write(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                        ~~~~~~~~~~~^~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:22:51: warning: unused parameter 'ino' [-Wunused-parameter]
warning:  static int disk_write(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                                       ~~~~~~~~~~~~~^~~

error: could not compile `mydisk` (lib) due to 3 previous errors; 9 warnings emitted
